# NavigableGraphs

./: .gitignore  .gitmodules  CMakeLists.txt
include/: distance_matrix.h  greedy_search.h  minimum_navigable_graph.h  mng_utils.h  point_set.h  set_cover.h
test/: CMakeLists.txt  greedy_set_cover.cpp  load_and_search.cpp  minimum_navigable_graph.cpp  set_cover.cpp  test_main.cpp  unbounded_prune.cpp
